[tool.poetry]
name = "loading"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
certifi = "2026.2.25"
charset-normalizer = "3.4.5"
contourpy = "1.3.3"
cycler = "0.12.1"
fonttools = "4.62.1"
idna = "3.11"
kiwisolver = "1.5.0"
matplotlib = "3.7.2"
numpy = "2.4.3"
packaging = "26.0"
pandas = "2.1.0"
pillow = "12.1.1"
pyparsing = "3.3.2"
python-dateutil = "2.9.0.post0"
requests = "2.31.0"
six = "1.17.0"
urllib3 = "2.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
