[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "Example",email = "example@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.7.2,<4.0.0)",
    "pandas (>=2.1.0,<3.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "numpy (>=1.26.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
